os/bluestore: acquire proper lock in split_cache()

Fixes: https://tracker.ceph.com/issues/49900
Signed-off-by: Igor Fedotov <ifedotov@suse.com>